--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,5 +1,12 @@
 ---
-- name: Substrate Install | Pull Latest tag
+- name: Substrate Install | Set pre-install facts
+  set_fact:
+    _archive_source: "{{ ('.tar.gz' in substrate_node_source) or ('.zip' in substrate_node_source) }}"
+    _remote_source: "{{ '://' in substrate_node_source }}"
+    _remote_chainspec: "{{ '://' in substrate_node_chain }}"
+    _remote_collator_chainspec: "{{ '://' in substrate_node_collator_chain }}"
+
+- name: Substrate Install | Pull latest tag
   block:
     - name: Substrate Install | Get repository latest release version
       uri:
@@ -20,34 +27,33 @@
     - name: Substrate Install | Download binary/archive
       get_url:
         url: "{{ substrate_node_source }}"
-        # need to try this: "{{ 'file' if item.stat.exists else 'touch' }}"
-        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary('/tmp', _substrate_node_bin_path) }}"
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         headers: "{{ substrate_node_get_url_headers | default(omit) }}"
         force: true
         mode: a+x
-        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+        backup: "{{ _archive_source }}"
       register: _download_output
       until: _download_output is succeeded
       retries: 5
       delay: 2
-  when: '"://" in substrate_node_source'
+  when: _remote_source
 
 - name: Substrate Install | Push
   block:
     - name: Substrate Install | Push binary/archive from local system
       ansible.builtin.copy:
         src: "{{ substrate_node_source }}"
-        dest: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(_substrate_node_bin_path, '/tmp') }}"
+        dest: "{{ _archive_source | ternary('/tmp', _substrate_node_bin_path) }}"
         remote_src: false
         owner: "{{ substrate_node_user }}"
         group: "{{ substrate_node_group }}"
         mode: 0744
-        backup: "{{ ('.tar.gz' not in substrate_node_source ) | ternary(true, false) }}"
+        backup: "{{ _archive_source }}"
         force: true
       register: _push_output
-  when: '"://" not in substrate_node_source'
+  when: not _remote_source
 
 - name: Substrate Install | Unarchive
   block:
@@ -74,7 +80,7 @@
         backup: true
         force: true
       register: _unarchive_push
-  when: '".tar.gz" in substrate_node_source'
+  when: _archive_source
 
 - name: Substrate Install | Create node key file
   copy:
@@ -84,7 +90,7 @@
     owner: "{{ substrate_node_user }}"
     group: "{{ substrate_node_group }}"
     mode: 0744
-  # no_log: true
+  no_log: true
   when: substrate_node_key | length
 
 - name: Substrate Install | Ensure node key is removed if not specified
@@ -92,7 +98,7 @@
     state: absent
     dest: "{{ _substrate_node_key_path }}"
     force: true
-  # no_log: true
+  no_log: true
   when: substrate_node_key == ""
 
 - name: Substrate Install | Download chain spec if defined as URL
@@ -109,7 +115,10 @@
 
     - set_fact:
         substrate_node_chain: "{{ download_spec.dest }}"
-  when: '"://" in substrate_node_chain'
+  when: _remote_chainspec
+  # loop:
+  #   - substrate_node_chain
+  #   - substrate_node_collator_chain
 
 - name: Substrate Install | Download collator chain spec if defined as URL
   block:
@@ -125,9 +134,8 @@
 
     - set_fact:
         substrate_node_collator_chain: "{{ download_collator_spec.dest }}"
-  when: '"://" in substrate_node_collator_chain'
+  when: _remote_collator_chainspec
 
-- name: Substrate Install | Set fact
+- name: Substrate Install | Set post-install facts
   set_fact:
-    _binary_updated: true
-  when: (_release_push.changed is defined) or (_unarchive_push.changed is defined) or (_download_output.changed is defined)
+    _binary_updated: "{{ (_unarchive_push.changed) or (_download_output.changed) }}"
