--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -87,7 +87,7 @@ substrate_node_state_cache_size: null
 #
 substrate_node_collator_chain: ""
 substrate_node_collator_execution: wasm
-substrate_node_collator_parachain_id: ""
+substrate_node_collator_parachain_id: null
 substrate_node_collator_bootnodes: ""
 substrate_node_collator_pruning: ""
 substrate_node_collator_force_runtime: ""
